# dark-matter-project

./: .gitignore  CMakeLists.txt
engine/: CMakeLists.txt
engine/shaders/: basic.frag  basic.vert
engine/src/engine/: application.c  application.h  entry.h  game_types.h
engine/src/engine/core/: event.c  event.h  input.h
engine/src/engine/platform/: platform.h  platform_sdl.c
engine/src/engine/renderer/: data.h  renderer.c  renderer.h
engine/src/engine/renderer/vulkan/: buffer.c  buffer.h  command_buffer.c  command_buffer.h  debug_messenger.c  debug_messenger.h  device.c  device.h  frame_buffer.c  frame_buffer.h  graphics_pipeline.c  graphics_pipeline.h  physical_device.c  physical_device.h  pipeline_config.c  pipeline_config.h  surface.c  surface.h  swapchain.c  swapchain.h  vertex_buffer.c  vertex_buffer.h  vulkan_instance.c  vulkan_instance.h  vulkan_renderer.c  vulkan_renderer.h  vulkan_types.h
std/: CMakeLists.txt
std/src/std/: defines.h  std.h
std/src/std/containers/: darray.c  darray.h  list.c  list.h
std/src/std/core/: file.c  file.h  logger.c  logger.h  memory.c  memory.h
testbed/: CMakeLists.txt
testbed/src/: main.c
